# pastrami

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  fly.toml  pastrami.conf  pastrami.conf.sample  pastrami.db  pastrami.wsgi  pastrami.yaml  pyproject.toml  requirements.txt  requirements2.txt  setup.py
.github/workflows/: test-and-deploy.yml
pastrami/: __about__.py  __init__.py  __main__.py  authentication.py  backend.py  background.py  cli.py  config.yml  configuration.py  configuration.yml  database.py  frontend.py  pastrami.conf  pastrami.py  settings.py  webapp.py
pastrami/configuration/: pastrami.yml
pastrami/openapi/: pastrami.yml
pastrami/templates/: index.html  index.html.jinja2
pastrami/webapp/: __init__.py  api.py  background.py  frontend.py  schema.py  webapp.py
pastrami/webapp/static/: humans.txt
pastrami/webapp/templates/: editor.jinja2  markdown.jinja2  viewer.jinja2
tests/: test_database.py  test_webapp.py
