[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "pastrami"
version = "1.2.0"
description = ""
authors = ["Marco Marzetti <marco@lamehost.it>"]
readme = "README.md"
packages = [{include = "pastrami"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.32.0"
fastapi = ">=0.9.0"
SQLAlchemy = "^2.0.36"
pydantic = "^2.9.2"
jinja2 = "^3.1.4"
aiosqlite = "^0.20.0"
markdown = "^3.4.1"
cryptography = "^43.0.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.6.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.12.0"
black = "^24.3.0"
coverage = "^7.0.1"
pytest = "^8.3.3"
requests = "^2.32.0"
bandit = "^1.7.7"
pylint = "^3.3.1"


[tool.poetry.group.dex.dependencies]
httpx = "^0.27.2"

[tool.poetry.scripts]
pastrami = "pastrami.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
