[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "pastrami"
version = "1.4.1"
description = ""
authors = ["Marco Marzetti <marco@lamehost.it>"]
readme = "README.md"
packages = [{include = "pastrami"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.38.0"
fastapi = ">=0.9.0"
SQLAlchemy = "^2.0.36"
pydantic = "^2.9.2"
jinja2 = "^3.1.6"
aiosqlite = "^0.21.0"
markdown = "^3.4.1"
cryptography = "^46.0.5"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.0"
email-validator = "^2.2.0"
lxml = "^6.0.0"
pydantic-core = "^2.37.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^7.0.0"
black = "^25.1.0"
coverage = "^7.0.1"
pytest = "^9.0.1"
requests = "^2.32.4"
bandit = "^1.7.7"
pylint = "^4.0.2"
httpx = "^0.28.1"


[tool.poetry.scripts]
pastrami = "pastrami.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
